tests/positive/test-success-ftoi.rooc
fun main()-> int{
    print_int(ftoi(114.514));
    println();
    return 0;
}