tests/negative/test-fail-var1.rooc
fun main() -> int {
    let z:int = 2;    
    print_int(z);
    return 0;
}